aligned the navbar to appear on the same spot on all screens, aalso added a default height for it on all screens. also fixed ratas1 text positioning to center

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,8 @@ body {
   font-size: 25px;
 
   /* height: 5.5%; */
-  margin-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
   padding: 20px 0;
   background-color: white;
   border-radius: 30px;
