--- a/src/components/Biudzeto-ispl/EndResult/EndResultBP9.css
+++ b/src/components/Biudzeto-ispl/EndResult/EndResultBP9.css
@@ -7,7 +7,7 @@ body {
     display: grid;
     /* repeat(12, 1fr) */
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 80px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 56px 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     margin: 0.5rem;
     gap: 0.5rem;
 
